--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.0.1",
     "@eslint/js": "^9.30.1",
-    "@storybook/addon-a11y": "^9.0.18",
-    "@storybook/addon-docs": "^9.0.18",
-    "@storybook/addon-vitest": "^9.0.18",
-    "@storybook/react-vite": "^9.0.18",
+    "@storybook/addon-a11y": "^8.6.14",
+    "@storybook/addon-docs": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -39,16 +39,15 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-storybook": "^9.0.18",
     "globals": "^16.3.0",
     "playwright": "^1.54.1",
     "postcss": "^8.5.6",
     "sass": "^1.89.2",
-    "storybook": "^9.0.18",
+    "storybook": "^8.6.14",
     "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4",
+    "vite": "^6.3.5",
     "vitest": "^3.2.4"
   }
 }
