feat: Add advanced features - theming, animations, error handling
- Add advanced theming system with dynamic theme switching
- Add comprehensive animation system with 16+ animation types
- Add error boundary and performance optimization utilities
- Add SingleTab component with position-based styling
- Update package version to 1.1.0
- Update README with advanced features documentation
- Add comprehensive examples for all new features

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pulseui-base",
-  "version": "1.0.0",
-  "description": "A modern React design system with TypeScript support, design tokens, and comprehensive component library",
+  "version": "1.1.0",
+  "description": "A modern React design system with TypeScript support, design tokens, comprehensive component library, advanced theming, animations, and error handling",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -95,7 +95,11 @@
     "scss",
     "design-tokens",
     "accessibility",
-    "responsive"
+    "responsive",
+    "theming",
+    "animations",
+    "error-handling",
+    "performance"
   ],
   "author": "Kazuri",
   "license": "MIT",
