--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
       "types": "./types/index.d.ts"
     },
     "./styles": {
-      "import": "./dist/styles.css",
-      "require": "./dist/styles.css"
+      "import": "./dist/pulseui-base.css",
+      "require": "./dist/pulseui-base.css"
     },
     "./tokens": {
       "import": "./dist/tokens.css",
       "require": "./dist/tokens.css"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "files": [
     "dist",
@@ -27,7 +28,10 @@
     "README.md",
     "LICENSE"
   ],
-  "sideEffects": false,
+  "sideEffects": [
+    "**/*.css",
+    "**/*.scss"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "npm run build:lib && npm run build:styles",
