--- a/package.json
+++ b/package.json
@@ -50,6 +50,14 @@
     "react": "^18.0.0 || ^19.0.0",
     "react-dom": "^18.0.0 || ^19.0.0"
   },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": false
+    },
+    "react-dom": {
+      "optional": false
+    }
+  },
   "dependencies": {
     "@material-symbols/font-400": "^0.33.0",
     "@mui/icons-material": "^7.2.0",
