fix: Include source SCSS files in published package - Added src/styles to files array for npm publishing - Added scss-compiled export for compiled CSS version - Fixed scss export path issue for customer usage

--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
       "import": "./src/styles/pulseui-base.scss",
       "require": "./src/styles/pulseui-base.scss"
     },
+    "./scss-compiled": {
+      "import": "./dist/pulseui-base.scss.css",
+      "require": "./dist/pulseui-base.scss.css"
+    },
     "./package.json": "./package.json"
   },
   "files": [
     "dist",
     "types",
+    "src/styles",
     "README.md",
     "LICENSE"
   ],
