--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -14,5 +14,16 @@
     "jsx": "react-jsx"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "**/*.test.ts", "**/*.test.tsx", "**/*.stories.tsx", "**/*.stories.ts"]
-} 
+  "exclude": [
+    "node_modules",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "**/*.stories.tsx",
+    "**/*.stories.ts",
+    "src/test",
+    "**/__tests__/**",
+    "**/__mocks__/**"
+  ]
+}
