--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
   },
   "dependencies": {
     "@material-symbols/font-400": "^0.33.0",
-    "@mui/icons-material": "^7.2.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@types/classnames": "^2.3.0",
     "classnames": "^2.5.1"
   },
