Implement Storybook performance optimizations: bundle splitting, icon lazy loading, Vercel caching, and build optimizations

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "build-storybook:analyze": "ANALYZE=true storybook build",
     "test": "vitest",
     "type-check": "tsc --noEmit"
   },
