--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,22 @@
   "outputDirectory": "storybook-static",
   "installCommand": "npm install",
   "framework": null,
+  "functions": {
+    "storybook-static/**/*": {
+      "maxDuration": 30
+    }
+  },
+  "headers": [
+    {
+      "source": "/storybook-static/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
