feat: Configure Jest testing framework and fix test files
- Add Jest configuration with proper TypeScript support
- Replace vitest imports with Jest throughout test files
- Create TypeScript config for tests with SCSS module support
- Add missing @testing-library/jest-dom imports to all tests
- Fix component prop mismatches (especially Pill component)
- Add IntersectionObserver mock for tests
- Set up Husky pre-commit hooks and Cypress E2E testing
- Create SCSS module type declarations for proper imports

Note: Tests still failing - need to fix jest-dom matchers and styles API

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,7 +25,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"],
+  "include": ["src", "src/scss-modules.d.ts"],
   "exclude": [
     "node_modules/@types/react-native",
     "**/*.test.ts",
