--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
     "test:e2e": "start-storybook -p 6006 & wait-on http://localhost:6006 && cypress run",
     "test:all": "npm run test:ci && npm run test:e2e",
     "percy:storybook": "percy-storybook --width=1280 --height=720",
-    "type-check": "tsc --noEmit",
     "sync-tokens": "node scripts/sync-figma-tokens.js",
+    "validate-tokens": "node scripts/validate-token-compliance.js",
+    "type-check": "tsc --noEmit",
     "prepare": "husky"
   },
   "peerDependencies": {
