Fix pull request creation in Figma sync workflow
 FIXES:
- Added proper branch configuration (figma-token-sync)
- Set base branch to master
- Added committer and author for GitHub Actions
- Enable automatic branch cleanup with delete-branch

 This should resolve the 'Create Pull Request' step failure

--- a/.github/workflows/sync-figma-tokens.yml
+++ b/.github/workflows/sync-figma-tokens.yml
@@ -129,6 +129,11 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          branch: figma-token-sync
+          base: master
+          delete-branch: true
+          committer: GitHub Actions <actions@github.com>
+          author: GitHub Actions <actions@github.com>
           commit-message: |
             🎨 Update design tokens from Figma
 
