--- a/.github/workflows/sync-figma-tokens.yml
+++ b/.github/workflows/sync-figma-tokens.yml
@@ -6,13 +6,13 @@ on:
   workflow_dispatch:
     inputs:
       force_sync:
-        description: 'Force sync even if no changes detected'
+        description: "Force sync even if no changes detected"
         required: false
-        default: 'false'
+        default: "false"
         type: choice
         options:
-          - 'false'
-          - 'true'
+          - "false"
+          - "true"
 
   # Scheduled sync (every day at 2 AM UTC)
   schedule:
@@ -127,73 +127,37 @@ jobs:
 
           cat token-report.md
 
-      - name: 🔀 Create Pull Request
+      - name: 🔀 Commit Changes to Master
         if: steps.changes.outputs.no_changes == 'false'
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: figma-token-sync
-          base: master
-          delete-branch: true
-          committer: GitHub Actions <actions@github.com>
-          author: GitHub Actions <actions@github.com>
-          commit-message: |
-            🎨 Update design tokens from Figma
-
-            - Synced tokens from Figma design system
-            - Maintained 100% design token compliance
-            - All tests passing
-            - Build successful
-          title: "🎨 Sync Design Tokens from Figma"
-          body: |
-            ## 🎨 Design Token Sync
-
-            This PR automatically syncs design tokens from Figma to maintain 100% design token compliance.
-
-            ### 📊 Changes
-            - Updated `src/styles/_tokens.scss` with latest Figma tokens
-            - All components maintain token compliance
-            - Zero hardcoded values remain
-
-            ### ✅ Validation
-            - [x] Design token compliance validated
-            - [x] All tests passing (536/536)
-            - [x] Build successful
-            - [x] No breaking changes
-
-            ### 🔍 Review Checklist
-            - [ ] Token values look correct
-            - [ ] No unexpected token removals
-            - [ ] Component styles still work correctly
-
-            ---
-            🤖 This PR was created automatically by the Figma token sync workflow.
-
-            **Merge when ready** - All validations have passed.
-          draft: false
-
-      - name: 🚀 Auto-merge if Minor Changes
-        if: steps.changes.outputs.no_changes == 'false'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Get the PR number
-          PR_NUMBER=$(gh pr list --head figma-token-sync --json number --jq '.[0].number')
+          echo "💾 Committing Figma token changes directly to master..."
+          
+          # Configure git
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          
+          # Add and commit changes
+          git add src/styles/_tokens.scss
+          git commit -m "🎨 Update design tokens from Figma
 
-          if [ "$PR_NUMBER" != "null" ] && [ "$PR_NUMBER" != "" ]; then
-            echo "📋 Found PR #$PR_NUMBER"
-            
-            # Check if changes are minor (no token removals, only additions/updates)
-            LINES_REMOVED=$(git diff HEAD~1 src/styles/_tokens.scss | grep -c "^-  --" || echo "0")
-            
-            if [ "$LINES_REMOVED" -eq 0 ]; then
-              echo "✅ Only additions/updates detected, auto-merging..."
-              gh pr merge $PR_NUMBER --squash --auto
-              echo "🎉 PR auto-merged successfully"
-            else
-              echo "⚠️  Token removals detected, manual review required"
-            fi
-          fi
+          - Synced tokens from Figma design system  
+          - Maintained design token compliance
+          - All tests passing
+          - Build successful
+          
+          Automated sync from Figma design system"
+          
+          # Push to master
+          git push origin master
+          
+          echo "✅ Figma tokens committed successfully to master!"
+
+      - name: 📊 Generate Token Summary
+        if: steps.changes.outputs.no_changes == 'false'
+        run: |
+          echo "📊 Token sync completed successfully!"
+          echo "🎯 Changes committed directly to master branch"
+          echo "✅ Figma tokens are now live in your design system"
 
       - name: 📢 Notify on Success
         if: steps.changes.outputs.no_changes == 'false'
