FORCE DEBUG: Add timestamp to detect sync issues
 DEBUG ENHANCEMENTS:
- Force change detection by adding timestamp comment
- Enhanced logging when no token changes detected
- Modified workflow to always run debug steps
- Will show if tokens are already up to date

 TESTING HYPOTHESIS:
- Figma tokens might be identical to current values
- No changes = no commit = looks like sync not working
- This debug version will confirm sync is working

 TEMP DEBUGGING ONLY:
- Adds timestamp comment to force git changes
- Will remove once we confirm sync process works

--- a/.github/workflows/sync-figma-tokens.yml
+++ b/.github/workflows/sync-figma-tokens.yml
@@ -86,15 +86,15 @@ jobs:
           git diff src/styles/_tokens.scss || echo "No differences found"
 
       - name: 🧪 Validate Token Compliance (TEMPORARILY DISABLED)
-        if: steps.changes.outputs.no_changes == 'false' || github.event.inputs.force_sync == 'true'
+        if: always() || github.event.inputs.force_sync == 'true'
         run: |
           echo "🔍 Token compliance validation temporarily disabled..."
           echo "🎯 Allowing Figma token sync to proceed"
           echo "⚠️  TODO: Re-enable after fixing 254 hardcoded values"
           echo "✅ Skipping compliance validation for now"
 
-      - name: 🧪 Run Tests
-        if: steps.changes.outputs.no_changes == 'false' || github.event.inputs.force_sync == 'true'
+      - name: 🧪 Run Tests (DEBUG MODE)
+        if: always() || github.event.inputs.force_sync == 'true'
         run: |
           echo "🧪 Running tests to ensure token changes don't break anything..."
           npm test
@@ -127,15 +127,15 @@ jobs:
 
           cat token-report.md
 
-      - name: 🔀 Commit Changes to Master
-        if: steps.changes.outputs.no_changes == 'false'
+      - name: 🔀 Commit Changes to Master (DEBUG MODE)
+        if: always()
         run: |
           echo "💾 Committing Figma token changes directly to master..."
-          
+
           # Configure git
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          
+
           # Add and commit changes
           git add src/styles/_tokens.scss
           git commit -m "🎨 Update design tokens from Figma
@@ -144,12 +144,12 @@ jobs:
           - Maintained design token compliance
           - All tests passing
           - Build successful
-          
+
           Automated sync from Figma design system"
-          
+
           # Push to master
           git push origin master
-          
+
           echo "✅ Figma tokens committed successfully to master!"
 
       - name: 📊 Generate Token Summary
