--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "pulseui-base",
-  "version": "1.2.1",
-  "description": "🏆 The world's most tested React component library - 100% test coverage, 536/536 tests passing, enterprise-grade reliability with design tokens, advanced theming, and comprehensive TypeScript support",
+  "version": "1.3.0",
+  "description": "⚡ Ultra-lightweight React component library with design tokens, multi-brand theming, and TypeScript support. Zero heavy dependencies - perfect for production apps.",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "types/index.d.ts",
   "exports": {
     ".": {
+      "types": "./types/index.d.ts",
       "import": "./dist/index.esm.js",
-      "require": "./dist/index.js",
-      "types": "./types/index.d.ts"
+      "require": "./dist/index.js"
     },
     "./styles": {
       "import": "./dist/pulseui-base.css",
@@ -42,29 +42,12 @@
     "**/*.scss"
   ],
   "scripts": {
-    "dev": "vite",
-    "build": "npm run build:lib && npm run build:styles",
+    "build": "npm run build:lib && npm run build:styles && npm run build:types",
     "build:lib": "vite build --config vite.lib.config.ts",
     "build:types": "tsc --project tsconfig.build.json",
-    "build:styles": "npx sass src/styles/_tokens.scss:dist/tokens.css --style compressed && npx sass src/styles/pulseui-base.scss:dist/pulseui-base.scss.css --style compressed",
+    "build:styles": "sass src/styles/_tokens.scss:dist/tokens.css --style compressed && sass src/styles/pulseui-base.scss:dist/pulseui-base.scss.css --style compressed",
     "prepublishOnly": "npm run build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "test:e2e": "start-storybook -p 6006 & wait-on http://localhost:6006 && cypress run",
-    "test:all": "npm run test:ci && npm run test:e2e",
-    "percy:storybook": "percy-storybook --width=1280 --height=720",
-    "sync-tokens": "node scripts/sync-figma-tokens.js",
-    "validate-tokens": "node scripts/validate-token-compliance.js",
-    "type-check": "tsc --noEmit",
-    "prepare": "husky"
+    "type-check": "tsc --noEmit"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
@@ -79,57 +62,16 @@
     }
   },
   "dependencies": {
-    "@material-symbols/font-400": "^0.33.0",
-    "@mui/icons-material": "^5.15.0",
-    "@mui/material": "^5.15.0",
-    "@types/classnames": "^2.3.0",
     "classnames": "^2.5.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "@percy/cli": "^1.31.1",
-    "@percy/storybook": "^9.0.0",
-    "@storybook/addon-a11y": "^8.6.14",
-    "@storybook/addon-docs": "^8.6.14",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-themes": "^8.6.14",
-    "@storybook/react-vite": "^8.6.14",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^30.0.0",
+    "@types/classnames": "^2.3.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
-    "@vitest/browser": "^3.2.4",
-    "@vitest/coverage-v8": "^3.2.4",
-    "autoprefixer": "^10.4.21",
-    "cypress": "^14.5.4",
-    "eslint": "^9.30.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "husky": "^9.1.7",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^26.1.0",
-    "lint-staged": "^16.1.5",
-    "playwright": "^1.54.1",
-    "postcss": "^8.5.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "sass": "^1.89.2",
-    "storybook": "^8.6.14",
-    "tailwindcss": "^4.1.11",
-    "ts-jest": "^29.4.1",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vite": "^6.3.5",
-    "vitest": "^3.2.4",
-    "wait-on": "^8.0.4"
+    "vite": "^6.3.5"
   },
   "keywords": [
     "react",
