--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pulseui-base",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "⚡ Ultra-lightweight React component library with design tokens, multi-brand theming, and TypeScript support. Zero heavy dependencies - perfect for production apps.",
   "type": "module",
   "main": "dist/index.js",
@@ -92,10 +92,13 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kazuri1/Pulseui.git"
+    "url": "git+https://github.com/kazuri1/Pulseui.git"
   },
   "bugs": {
     "url": "https://github.com/kazuri1/Pulseui/issues"
   },
-  "homepage": "https://github.com/kazuri1/Pulseui#readme"
+  "homepage": "https://github.com/kazuri1/Pulseui#readme",
+  "directories": {
+    "doc": "docs"
+  }
 }
