Add @mui/icons-material as peer dependency and dev dependency

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "@mui/icons-material": "^5.0.0 || ^6.0.0 || ^7.0.0"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -68,6 +69,7 @@
     }
   },
   "devDependencies": {
+    "@mui/icons-material": "^5.15.0",
     "@storybook/addon-a11y": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
