--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pulseui-base",
-  "version": "1.3.11",
+  "version": "1.3.14",
   "description": "⚡ Ultra-lightweight React component library with design tokens, multi-brand theming, and TypeScript support. Zero heavy dependencies - perfect for production apps.",
   "type": "module",
   "main": "dist/index.js",
@@ -56,11 +56,11 @@
     "pack:check": "npm pack && tar -tf *.tgz"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
-    "@mui/icons-material": "^5.0.0 || ^6.0.0 || ^7.0.0",
     "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0"
+    "@emotion/styled": "^11.0.0",
+    "@mui/icons-material": "^5.0.0 || ^6.0.0 || ^7.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -71,9 +71,9 @@
     }
   },
   "devDependencies": {
-    "@mui/icons-material": "^5.15.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0",
     "@storybook/addon-a11y": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
@@ -113,5 +113,8 @@
   "bugs": {
     "url": "https://github.com/kazuri1/Pulseui/issues"
   },
-  "homepage": "https://github.com/kazuri1/Pulseui#readme"
+  "homepage": "https://github.com/kazuri1/Pulseui#readme",
+  "dependencies": {
+    "pulseui-base": "^1.3.14"
+  }
 }
