--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pulseui-base",
-  "version": "1.4.0",
+  "version": "1.5.1",
   "description": "⚡ Ultra-lightweight React component library with design tokens, multi-brand theming, and TypeScript support. Zero heavy dependencies - perfect for production apps.",
   "type": "module",
   "main": "dist/index.js",
@@ -113,8 +113,5 @@
   "bugs": {
     "url": "https://github.com/kazuri1/Pulseui/issues"
   },
-  "homepage": "https://github.com/kazuri1/Pulseui#readme",
-  "dependencies": {
-    "pulseui-base": "^1.3.14"
-  }
+  "homepage": "https://github.com/kazuri1/Pulseui#readme"
 }
