--- a/package.json
+++ b/package.json
@@ -127,6 +127,8 @@
   },
   "homepage": "https://github.com/kazuri1/Pulseui#readme",
   "dependencies": {
-    "pulseui-base": "^1.10.0"
+    "@types/react-router-dom": "^5.3.3",
+    "pulseui-base": "^1.10.0",
+    "react-router-dom": "^7.8.2"
   }
 }
