--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pulseui-base",
   "version": "1.10.1",
-  "description": "⚡ Ultra-lightweight React component library with design tokens, multi-brand theming, and TypeScript support. Zero heavy dependencies - perfect for production apps.",
+  "description": "Ultra-lightweight React component library with design tokens, multi-brand theming, and TypeScript support. Zero heavy dependencies - perfect for production apps.",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -81,6 +81,7 @@
   "devDependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@eslint-react/eslint-plugin": "^1.52.9",
     "@mui/icons-material": "^5.15.0",
     "@storybook/addon-a11y": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
@@ -89,11 +90,12 @@
     "@storybook/react-vite": "^8.6.14",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.0.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^5.0.0-rc.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sass": "^1.89.2",
@@ -127,8 +129,6 @@
   },
   "homepage": "https://github.com/kazuri1/Pulseui#readme",
   "dependencies": {
-    "@types/react-router-dom": "^5.3.3",
-    "pulseui-base": "^1.10.0",
-    "react-router-dom": "^7.8.2"
+    "typescript-eslint": "^8.42.0"
   }
 }
