--- a/.vercelignore
+++ b/.vercelignore
@@ -1,3 +1,9 @@
+# Storybook files - exclude from main app deployment
+**/*.stories.*
+**/*.story.*
+.storybook/
+storybook-static/
+
 # Development files
 node_modules
 .git
@@ -11,7 +17,6 @@ node_modules
 
 # Build artifacts (will be generated during build)
 dist
-storybook-static
 types
 
 # Documentation
@@ -24,7 +29,6 @@ LICENSE
 .prettierrc*
 tailwind.config.js
 postcss.config.js
-vite.config.ts
 vite.lib.config.ts
 tsconfig*.json
 
