--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pulseui-base",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "Ultra-lightweight React component library with design tokens, multi-brand theming, and TypeScript support. Zero heavy dependencies - perfect for production apps.",
   "type": "module",
   "main": "dist/index.js",
@@ -98,6 +98,7 @@
     "@storybook/addon-interactions": "^8.6.14",
     "@storybook/addon-themes": "^8.6.14",
     "@storybook/react-vite": "^8.6.14",
+    "@types/node": "^24.3.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@typescript-eslint/eslint-plugin": "^8.42.0",
@@ -129,15 +130,15 @@
     "performance"
   ],
   "author": "Kazuri",
-  "license": "MIT",
+  "license": "Apache",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kazuri1/Pulseui.git"
+    "url": "https://github.com/kazuri1/pulseui-base.git"
   },
   "bugs": {
-    "url": "https://github.com/kazuri1/Pulseui/issues"
+    "url": "https://github.com/kazuri1/pulseui-base/issues"
   },
-  "homepage": "https://github.com/kazuri1/Pulseui#readme",
+  "homepage": "https://github.com/kazuri1/pulseui-base#readme",
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "2.1.1",
     "@chatscope/chat-ui-kit-styles": "1.4.0",
